# GenAI---Medicals

./: Makefile  README.md  TODO.md  build.ps1  cdk.json  example.env  package-lock.json  package.json  pyproject.toml
assets/: TROUBLESHOOTING.md
lambda/extraction/: handler.py  pyproject.toml
lambda/notify_app_connect/: handler.py  pyproject.toml
lambda/processing/: handler.py  pyproject.toml
lambda/start_workflow/: handler.py  pyproject.toml
lib/: api-gateway.ts  dynamodb.ts  lambda.ts  s3-buckets.ts  sh-stack.ts  step-function.ts
lib/api/: spec.yaml
lib/utils/: resource_tagger.ts
scripts/: MANUAL-PROCESSING.md
scripts/event-and-env-vars/extraction/: event-response-from-doc-rio.json  event-vars.json  event.json
scripts/event-and-env-vars/processing/: event-vars.json  event.json
scripts/event-and-env-vars/start_workflow/: event-diag-response.json  event-diagnostic-test.json  event-hospital-urgent-care.json  event-procedures.json  event-provider.json  event-pt-chiro.json  event-template.json  event-vars.json  event.json  respons.soap.xml
scripts/sam/: generate_event.py  sam-invoke-extraction-lambda.sh  sam-invoke-processing-lambda.sh  sam-invoke-start-workflow-lambda.sh
statemachines/: document-processing-workflow.asl.json
