[tool.poetry]
name = "extraction-lambda"
version = "0.1.0"
description = "Lambda function for extracting data from DocRio"
authors = ["Josh Crosby <jcrosby@innovativesol.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.33.0"
requests = "^2.31.0"
aiohttp = "^3.10.10"
aws-xray-sdk = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
