[tool.poetry]
name = "start-workflow-lambda"
version = "0.1.0"
description = "Lambda function for starting the workflow"
authors = ["Josh Crosby <jcrosby@innovativesol.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.18.0"
aws-xray-sdk = "^2.14.0"
aiohttp = "^3.10.10"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
